SUBDIRS = Backgrounds Defaults IconSets Icons Pixmaps Styles Themes

prefsdatadir = $(pkgdatadir)

prefsdata_DATA =\
	appearance.menu\
	autostart.sh\
	background.menu\
	exitscript.sh\
	menu\
	menu.bg\
	menu.ca\
	menu.cz\
	menu.da\
	menu.de\
	menu.el\
	menu.es\
	menu.fi\
	menu.fr\
	menu.fy\
	menu.gl\
	menu.he\
	menu.hr\
	menu.hu\
	menu.it\
	menu.ja\
	menu.ko\
	menu.nl\
	menu.no\
	menu.pl\
	menu.pt\
	menu.ro\
	menu.ru\
	menu.se\
	menu.sk\
	menu.sl\
	menu.tr\
	menu.zh_CN\
	menu.zh_TW\
	plmenu\
	plmenu.bg\
	plmenu.da\
	plmenu.de\
	plmenu.es\
	plmenu.fi\
	plmenu.fr\
	plmenu.fy\
	plmenu.hr\
	plmenu.it\
	plmenu.ja\
	plmenu.ko\
	plmenu.nl\
	plmenu.pl\
	plmenu.ro\
	plmenu.sk\
	plmenu.zh_CN\
	plmenu.zh_TW\
	README\
	README.themes\
	wmmacros

EXTRA_DIST = $(prefsdata_DATA) mkMakefile


