
defsdatadir = $(pkgdatadir)/Icons


defsdata_DATA = \
	BitchX.tiff\
	BitchX.xpm\
	clip.tiff\
	clip.xpm\
	defaultAppIcon.tiff\
	defaultAppIcon.xpm\
	defaultterm.tiff\
	defaultterm.xpm\
	draw.tiff\
	draw.xpm\
	Drawer.xpm\
	Drawer.tiff\
	Ear.png\
	Ftp.png\
	GNUstep3D.tiff\
	GNUstep3D.xpm\
	GNUstepGlow.tiff\
	GNUstepGlow.xpm\
	GNUstep.tiff\
	GNUstep.xpm\
	GNUterm.tiff\
	GNUterm.xpm\
	GreenWilber.png\
	ICQ.png\
	Jabber.png\
	linuxterm.tiff\
	linuxterm.xpm\
	Magnify.tiff\
	Magnify.xpm\
	mixer.tiff\
	mixer.xpm\
	Mouth.png\
	Mozilla.png\
	notepad.tiff\
	notepad.xpm\
	pdf.tiff\
	pdf.xpm\
	Pencil.png\
	Pen.png\
	ps.tiff\
	ps.xpm\
	README\
	Real.png\
	real.tiff\
	real.xpm\
	sgiterm.tiff\
	sgiterm.xpm\
	Shell.png\
	Speaker.png\
	staroffice2.tiff\
	staroffice2.xpm\
	TerminalGNUstep.tiff\
	TerminalGNUstep.xpm\
	TerminalLinux.tiff\
	TerminalLinux.xpm\
	Terminal.tiff\
	Terminal.xpm\
	timer.tiff\
	timer.xpm\
	wilber.tiff\
	wilber.xpm\
	Wine.png\
	write.tiff\
	write.xpm\
	XChat.png\
	xdvi.tiff\
	xdvi.xpm\
	xv.tiff\
	xv.xpm


EXTRA_DIST = $(defsdata_DATA) 

