tiffdatadir = $(wprefs_datadir)/tiff

if ICON_EXT_TIFF
dist_tiffdata_DATA = \
	advancetonewworkspace.tiff \
	animations.tiff \
	appearance.tiff \
	clip.tiff \
	configs.tiff \
	cycleworkspaces.tiff \
	dock.tiff \
	dockclipdrawersection.tiff \
	dontlinkworkspaces.tiff \
	drawer.tiff \
	ergonomic.tiff \
	expert.tiff \
	fonts.tiff \
	iconprefs.tiff \
	keyboard.tiff \
	keyboardprefs.tiff \
	keyshortcuts.tiff \
	menualign1.tiff \
	menualign2.tiff \
	menuprefs.tiff \
	menus.tiff \
	miscprefs2.tiff \
	moreanim.tiff \
	mousesettings.tiff \
	mousespeed.tiff \
	msty1.tiff \
	msty2.tiff \
	msty3.tiff \
	newstyle.tiff \
	nextstyle.tiff \
	nonopaque.tiff \
	noopaqueresize.tiff \
	oldstyle.tiff \
	opaque.tiff \
	opaqueresize.tiff \
	paths.tiff \
	smallwindow.tiff \
	smooth.tiff \
	sound.tiff \
	speed0.tiff \
	speed0s.tiff \
	speed1.tiff \
	speed1s.tiff \
	speed2.tiff \
	speed2s.tiff \
	speed3.tiff \
	speed3s.tiff \
	speed4.tiff \
	speed4s.tiff \
	tdel.tiff \
	tedit.tiff \
	temp.tiff \
	textr.tiff \
	theme.tiff \
	timer0.tiff \
	timer0s.tiff \
	timer1.tiff \
	timer1s.tiff \
	timer2.tiff \
	timer2s.tiff \
	timer3.tiff \
	timer3s.tiff \
	timer4.tiff \
	timer4s.tiff \
	timer5.tiff \
	timer5s.tiff \
	tnew.tiff \
	whandling.tiff \
	windowfocus.tiff \
	workspace.tiff \
	workspacename.tiff \
	xis.tiff 
endif
